# SiGame

./: .gitignore  Pipfile  README.md  Y.siq  dodo.py  parser.py  pyproject.toml  server.py  test.py  test.siq
app/: __main__.py  app.py
docs/source/: app_documentation.rst  conf.py  index.rst  parser_documentation.rst  server_documentation.rst
sigame/: .flake8  app.py  parser.py  server.py
sigame/locale/en/LC_MESSAGES/: myapp.mo  myapp.po
sigame/locale/ru/LC_MESSAGES/: myapp.mo  myapp.po
sigame/utils/: generate_translation.py
src/: .flake8  .pydocstyle  __main__.py  app.py  server.py
src/utils/: generate_translation.py
